--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   script-src 'self'; 
   style-src 'self' 'unsafe-inline'; 
   img-src 'self' data:; 
-  connect-src 'self' http://localhost:4000;
+  connect-src 'self' http://localhost:4000 https://petstore.swagger.io https://jsonplaceholder.typicode.com;
 ">
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
